--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" output="bin/classes" path="src/main/java"/>
-	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" output="bin/classes" path="src/main/resources"/>
+	<classpathentry kind="src" output="bin/classes" path="src/test/java"/>
+	<classpathentry kind="src" output="bin/classes" path="src/test/resources"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
