--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
 		        </exclusion>
 		    </exclusions>		    
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>hamcrest-core</artifactId>
+					<groupId>org.hamcrest</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
     </dependencies>
 
     <build>
