--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,13 @@
   package="cz.saniga.android.diploma.soul" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".QuestionActivity">
+    <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity android:name=".TestActivity"/>
   </application>
 
 </manifest>
